syntax = "proto3";

package ThmServices;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloA (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
